--- a/src/containers/App/App.styl
+++ b/src/containers/App/App.styl
@@ -22,7 +22,8 @@ body {
     &__container
         display: flex
         flex-direction: column
-        width: 600px
+        width: 50%
+        max-width: 500px
         height: 100%
         margin: auto
 
