--- a/src/components/molecules/Board/Board.styl
+++ b/src/components/molecules/Board/Board.styl
@@ -1,10 +1,13 @@
 .board
+    $cellSize = 100px
+
     position: relative
 
-    width: 100%
-    padding: 100% 0 0
+    width: 3 * $cellSize
+    height: 3 * $cellSize
+    margin: auto
 
-    background: tomato
+    background: #fff
 
 
     &__cells
@@ -24,19 +27,9 @@
         box-sizing: border-box
         float: left
 
-        width: calc(100% / 3)
-        padding: calc(100% / 3) 0 0
-
-        box-shadow: inset 0 0 0 1px #000
+        width: $cellSize
+        height: $cellSize
 
 
         &_active
             background: yellowgreen
-
-
-.cell-appear
-    opacity: 0
-
-.cell-appear.cell-appear-active
-    opacity: 1
-    transition: opacity .5s ease-in
