--- a/src/containers/App/App.styl
+++ b/src/containers/App/App.styl
@@ -14,7 +14,7 @@ body {
 .app
     height: 100%
 
-    font-family: Roboto, sans-serif
+    font-family: Raleway, sans-serif
 
     background: rgba(0,0,0,.2)
 
@@ -22,14 +22,13 @@ body {
     &__container
         display: flex
         flex-direction: column
-        width: 50%
-        max-width: 500px
+        width: 300px
         height: 100%
         margin: auto
 
 
     &__header
-        padding: 40px 0
+        padding: 30px 0 25px
 
 
     &__main
@@ -40,4 +39,4 @@ body {
         margin: 0
 
         text-align: center
-        font-size: 54px
+        font-size: 42px
