--- a/src/components/atoms/HotKey/HotKey.styl
+++ b/src/components/atoms/HotKey/HotKey.styl
@@ -3,6 +3,13 @@
 
     text-align: center
 
+    opacity: 1
+    transition: opacity .5s
+
+
+    &_disabled
+        opacity: .2
+
 
     &__value
         font-size: 24px
