--- a/src/components/molecules/StartButton/StartButton.styl
+++ b/src/components/molecules/StartButton/StartButton.styl
@@ -1,14 +1,15 @@
 .start-button
-    $bgColor = yellowgreen
+    $bgColor = #ddd
 
     display: inline-block
-    margin: 3em 0
+    margin: 2.4em 0 3em
     padding: 0.6em
 
     font-size: 24px
 
     cursor: pointer
     user-select: none
+    border: 4px solid #fff
     background: $bgColor
 
 
