--- a/src/components/App/App.styl
+++ b/src/components/App/App.styl
@@ -16,7 +16,8 @@ body {
 
     font-family: Raleway, sans-serif
 
-    background: #fff
+    background: #fff url('./img/bg.jpg')
+    background-size: 200px 200px
 
 
     &__container
@@ -25,6 +26,9 @@ body {
         width: 300px
         height: 100%
         margin: auto
+        padding: 0 2%
+
+        background: rgba(255,255,255,0.9);
 
 
     &__header
