--- a/src/components/molecules/Result/Result.styl
+++ b/src/components/molecules/Result/Result.styl
@@ -1,4 +1,12 @@
 .result
-    text-align: center
-    font-size: 50px
-    line-height: 300px
+    display: flex
+    align-items: center
+    height: 300px
+
+    font-size: 30px
+
+
+    &__wrapper
+        flex: 1
+
+        text-align: center
